
# Vermillion Tower Shade and Boss lock:

- A condition that locks Vermillion Tower entrance until you get all 4 element shades (Azure Drop, Purple Bolt, Blue Ice, and Red Flame Shades), and beaten the 4 element dungeons (Mine, Faj'ro, So'najiz and Zir'vitar).

# Vermillion Tower floor skips:

- Enables all Tower floors once you finish the ground floor fight. This allows skipping the entirety of Vermillion Tower up to the last fight before the boss

# Meteor Shade Wasteland:

- Locks Vermillion Wasteland Tunnel behind a Meteor Shade barrier.

# Open Faj'ro Temple:

- Enables a few extra passages on Upper Faj'ro Temple to make it less linear. This means most puzzles must be done in reverse order to access certain locations in reverse.
  This includes:

* F4 South Corridor has no doors locked (you can access Test of Surprise or Test of Memory earlier)
* F4 East Corridor can now be done in reverse
* F4 Gateway side doors are now accesible from the top floor
* F4 East Pathway can now be solved from both sides (from the bottom side, you have to solve the puzzle in reverse to exit up)
* F3 Test of Wisdom can now be accessed from F3 Bottom Chamber. This means to access F4 East Corridor through F3 Right Chamber, you have to solve the puzzle in reverse

==========================================================================================

## VERSION CHANGES

# v0.2.1

Fixes:
- Emilie now is not locked anymore if she joins through the guild cutscene in Old Obelisk
- Guild intro is now completable
- Hlin should be present for observatory quest intro in Guild HQ (it was locked to plot being around post-meteor shade events)
- V'rda Vil NPCs should now hide properly
- Smelter Digmo only activates when entering the room after having Infected Digmo killed

Changes:
- All the shareholder events in Rhombus Square can be now done as soon as you gain access to Rhombus Square, and finish the guild intro


# v0.2.0

New Patches:

- Open Faj'ro
- Meteor Shade Wasteland

Fixes:
